# agentland

./: Makefile  PROJECT_SUMMARY.md  README.md  agentland_conversation_document.txt  deepeval.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_phase2.py  test_phase3.py  test_phase4.py
config/: logging_config.py  observability.py  settings.py
docs/: architecture.md  evaluation_guide.md  observability_guide.md
scripts/: run_evaluation.py  validate_setup.py
src/agents/: account_agent.py  base.py  billing_agent.py  escalation_agent.py  technical_agent.py  triage_agent.py
src/agents/prompts/: account.py  billing.py  escalation.py  technical.py  triage.py
src/api/: main.py
src/api/middleware/: correlation_id.py  error_handler.py
src/api/models/: requests.py  responses.py
src/api/routes/: health.py  metrics.py  tickets.py
src/llm/: client.py  retry.py  token_counter.py
src/observability/: context.py  decorators.py  logger.py  metrics.py  tracer.py
src/orchestration/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/tools/: base.py  database.py  email.py  knowledge_base.py  payment.py  registry.py
src/utils/: errors.py
tests/evaluation/: test_benchmark.py  test_routing_eval.py  test_tool_usage_eval.py
tests/evaluation/datasets/: account_cases.json  billing_cases.json  edge_cases.json  technical_cases.json
tests/evaluation/metrics/: __init__.py  routing_accuracy.py  tool_usage_metric.py
tests/integration/: test_api.py  test_workflow.py
tests/unit/test_agents/: test_triage_agent.py
tests/unit/test_llm/: test_llm_client.py
tests/unit/test_tools/: test_database_tool.py  test_email_tool.py  test_payment_tool.py
